# dagster-trial

./: .bandit.yml  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Dockerfile  Makefile  README.md  buildspec.yml  pyproject.toml
deployment/environments/: root.hcl
deployment/environments/bos/production/: terragrunt.hcl
deployment/environments/cs-swiss/production/: terragrunt.hcl
deployment/environments/cs/production/: terragrunt.hcl
deployment/environments/ml/development/: .terraform.lock.hcl  terragrunt.hcl
deployment/environments/ml/production/: terragrunt.hcl
deployment/environments/us/production/: terragrunt.hcl
deployment/terraform/: docker.tf  main.tf  serviceaccounts.tf  variables.tf  versions.tf  workloads.tf
pipeline/: __init__.py  sample_job.py  schedules.py
scripts/: build-docker.sh  conditional-push.sh  get-project-name.sh  init-template.sh
scripts/codebuild/: build.sh  install.sh  pre_build.sh
